# OpenSuperWhisper

./: WINDOWS.md  opensuperwhisper.json
.github/workflows/: windows-tauri.yml
opensuperwhisper-tauri/: index.html  package-lock.json  package.json  vite.config.ts
opensuperwhisper-tauri/src/: main.ts  styles.css
opensuperwhisper-tauri/src-tauri/: Cargo.toml  tauri.conf.json
opensuperwhisper-tauri/src-tauri/capabilities/: default.json
opensuperwhisper-tauri/src-tauri/src/: audio.rs  config.rs  db.rs  integration.rs  lib.rs  main.rs  transcribe.rs
