[package]
name = "opensuperwhisper-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "opensuperwhisper_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.16.0"
autocorrect = "2.14.2"
cpal = "0.15"
hound = "3.5"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3.4"
enigo = { version = "0.1.2", features = [] }
directories = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
